--- a/.github/workflows/discovery-api.yml
+++ b/.github/workflows/discovery-api.yml
@@ -3,7 +3,7 @@ name: Sync Discovered API with API Connect
 on: [pull_request, workflow_dispatch, push]
 
 env:
-  API_HOST: api-manager.us-east-a.apiconnect.automation.ibm.com
+  API_HOST: us-east-a.apiconnect.automation.ibm.com
   PROVIDER_ORG: acme-coffee-roasters
   API_FOLDERS: api
 
