--- a/.github/workflows/send-to-discovery.yml
+++ b/.github/workflows/send-to-discovery.yml
@@ -5,7 +5,7 @@ on: [pull_request, workflow_dispatch, push]
 env:
   API_HOST: us-east-a.apiconnect.automation.ibm.com
   PROVIDER_ORG: acme-coffee-roasters
-  API_FOLDERS: api
+  API_FOLDERS: api, openapi-directory-main
 jobs:
   run-discovery:
     runs-on: ubuntu-latest
